# MayaBot

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: sheet-timeframe-update.yaml
mayabot/: bot.py
mayabot/botscripts/: logscript.py  wakeup.py
